fix: z-index on a modal

--- a/src/styles/modalReview.css
+++ b/src/styles/modalReview.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 70;
 }
 
 .modal-container {
@@ -21,7 +21,7 @@
     padding: 20px;
     width: 500px;
     height: auto;
-    z-index: 2;
+    z-index: 100;
     box-shadow: 2px 2px 10px rgba(18, 18, 18, 0.2);
 }
 
